--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,7 +1,11 @@
 {%extends 'base.html'%}
     {% block main%}
-                {% for post in post_list %}
 
+                {% if error_msg %}
+                    <p>{{ error_msg }}</p>
+                {% endif %}
+                {% for post in post_list %}
+    
                 <article class="post post-{{ post.pk}}">
                     <header class="entry-header">
                         <h1 class="entry-title">
@@ -12,12 +16,12 @@
                             <span class="post-date"><a href="#"><time class="entry-date"
                                                                       datetime="{{post.create_time}}">{{post.create_time}}</time></a></span>
                             <span class="post-author"><a href="#">{{post.author}}</a></span>
-                            <span class="comments-link"><a href="#">4 评论</a></span>
-                            <span class="views-count"><a href="#">588 阅读</a></span>
+                            <span class="comments-link"><a href="#">{{post.comment_set.count}} 评论</a></span>
+                            <span class="views-count"><a href="{{ post.get_absolute_url }}">{{ post.views }} 阅读</a></span>
                         </div>
                     </header>
                     <div class="entry-content clearfix">
-                        <p>{{post.excerpt}}</p>
+                        <p>{{post.excerpt}}...</p>
                         <div class="read-more cl-effect-14">
                             <a href="{{post.get_absolute_url}}" class="more-link">继续阅读 <span class="meta-nav">→</span></a>
                         </div>
@@ -26,24 +30,16 @@
                 {% empty %}
                     <div class="no-post">暂时还没有发布的文章！</div>
                 {%endfor%}
-                <!-- 简单分页效果
-                <div class="pagination-simple">
-                    <a href="#">上一页</a>
-                    <span class="current">第 6 页 / 共 11 页</span>
-                    <a href="#">下一页</a>
-                </div>
-                -->
+                
                 <div class="pagination">
-                    <ul>
-                        <li><a href="">1</a></li>
-                        <li><a href="">...</a></li>
-                        <li><a href="">4</a></li>
-                        <li><a href="">5</a></li>
-                        <li class="current"><a href="">6</a></li>
-                        <li><a href="">7</a></li>
-                        <li><a href="">8</a></li>
-                        <li><a href="">...</a></li>
-                        <li><a href="">11</a></li>
-                    </ul>
+                    {% if page_obj.has_previous %}
+                        <a href="?page={{ page_obj.previous_page_number}}">上一页</a>
+                    {% endif %}
+                    <span class="current">第 {{ page_obj.number }} 页 / 共 {{ paginator.num_pages }} 页</span>
+
+                    {% if page_obj.has_next %}
+                        <a href="?page={{ page_obj.next_page_number }}">下一页</a>
+                    {% endif%}
                 </div>
+                
 {% endblock main%}
